# litt

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml  release.yml
index/: Cargo.toml
index/src/: index.rs  lib.rs
litt/: Cargo.toml
litt/src/: cli.rs  interactive_search.rs  main.rs  tracker.rs
litt/tests/: tests.rs
resources/: test.md
scripts/: update-versions.sh
scripts/search_two_words/: two_words.json  words.py
search/: Cargo.toml
search/src/: lib.rs  search.rs
shared/: Cargo.toml
shared/src/: lib.rs  message_display.rs  search_schema.rs  test_helpers.rs
src/: main.rs
tests/: helpers.rs
