[package]
name = "litt_index"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.3.3"
litt_shared = { path = "../shared" }
tokio = { workspace = true }
tokio-stream = "0.1.14"
futures = "0.3"
[dev-dependencies]
once_cell = "1.17.1"
serial_test = "2.0.0"
