[package]
name = "litt"
version = "1.0.1"
edition = "2021"

[dependencies]
tantivy = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
colored = { workspace = true }
litt_search = { path = "../search" }
litt_shared = { path = "../shared" }
litt_index = { path = "../index" }
