[package]
name = "litt"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/georgbuechner/litt/"

[dependencies]
tantivy = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
unicode-segmentation = { workspace = true }
litt_search = { path = "../search" }
litt_shared = { path = "../shared" }
litt_index = { path = "../index" }
